# sovereign-kernel

./: .env.example  .gitignore  ARCHITECTURE.md  BEGINNER_GUIDE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EASY_START.md  GETTING_STARTED.md  LICENSE  MAINTENANCE.md  README.md  SECURITY.md  USAGE.md  USER_GUIDE.md  VISION.md  check.json  config.sandbox.toml  config.toml  config.toml.example  config.unrestricted.toml  docker-compose.yml  patch_subprocess.sh  rust-toolchain.toml  setup.sh
crates/sk-channels/: Cargo.toml
crates/sk-channels/src/: bridge.rs  discord.rs  formatter.rs  lib.rs  router.rs  slack.rs  telegram.rs  types.rs  whatsapp.rs
crates/sk-channels/src/adapters/: bluesky.rs  dingtalk.rs  discourse.rs  email.rs  feishu.rs  flock.rs  gitter.rs  google_chat.rs  gotify.rs  guilded.rs  irc.rs  keybase.rs  line.rs  linkedin.rs  mastodon.rs  matrix.rs  mattermost.rs  messenger.rs  mod.rs  mumble.rs  nextcloud.rs  nostr.rs  ntfy.rs  pumble.rs  reddit.rs  revolt.rs  rocketchat.rs  signal.rs  slack.rs  teams.rs  threema.rs  twist.rs  twitch.rs  viber.rs  webchat.rs  webex.rs  webhook.rs  xmpp.rs  zulip.rs
crates/sk-channels/tests/: bridge_integration_test.rs
crates/sk-cli/: Cargo.toml
crates/sk-cli/src/: agents.rs  audit.rs  bridge.rs  channels.rs  chat.rs  daemon.rs  dashboard.rs  doctor.rs  hands.rs  init.rs  main.rs  mcp.rs  memory.rs  middleware.rs  openai_compat.rs  run.rs  safety.rs  setup_wizard.rs  soul_wizard.rs  status.rs  tool_executor.rs  treasury.rs
crates/sk-cli/static/: index_body.html  index_head.html
crates/sk-cli/static/css/: components.css  layout.css  theme.css
crates/sk-engine/: Cargo.toml
crates/sk-engine/examples/: test_otto.rs
crates/sk-engine/src/: a2a.rs  agent_loop.rs  compactor.rs  context_budget.rs  forensics.rs  host_functions.rs  lib.rs  llm_driver.rs  local_inference.rs  loop_guard.rs  model_catalog.rs  process_manager.rs  prompt_builder.rs  python_runtime.rs  retry.rs  routing.rs  sentinel.rs  streaming.rs  tool_runner.rs  workspace_context.rs
crates/sk-engine/src/drivers/: anthropic.rs  copilot.rs  fallback.rs  gemini.rs  mod.rs  openai.rs
crates/sk-engine/src/media/: browser.rs  browser_bridge.py  image_gen.rs  link_understanding.rs  mod.rs
crates/sk-engine/src/runtime/: apply_patch.rs  auth_cooldown.rs  browser.rs  context_overflow.rs  docker_sandbox.rs  embedding.rs  graceful_shutdown.rs  hooks.rs  kernel_handle.rs  link_understanding.rs  llm_errors.rs  loop_guard.rs  mcp.rs  mcp_server.rs  media_understanding.rs  mod.rs  ottos_outpost.rs  readability.js  sandbox.rs  session_repair.rs  subprocess_sandbox.rs  tts.rs  web_content.rs  web_fetch.rs  web_search.rs  workspace_sandbox.rs
crates/sk-engine/src/sandbox/: docker_sandbox.rs  mod.rs  sandbox.rs  subprocess_sandbox.rs
crates/sk-engine/tests/: e2e_sandbox_test.rs
crates/sk-hands/: Cargo.toml
crates/sk-hands/bundled/artificer/: HAND.toml  SKILL.md
crates/sk-hands/bundled/browser/: HAND.toml  SKILL.md
crates/sk-hands/bundled/clip/: HAND.toml  SKILL.md
crates/sk-hands/bundled/collector/: SKILL.md
crates/sk-hands/bundled/email/: HAND.toml  SKILL.md
crates/sk-hands/bundled/lead/: SKILL.md
crates/sk-hands/bundled/mysql-reporter/: HAND.toml  SKILL.md
crates/sk-hands/bundled/otto/: HAND.toml  SKILL.md
crates/sk-hands/bundled/predictor/: SKILL.md
crates/sk-hands/bundled/researcher/: HAND.toml  SKILL.md
crates/sk-hands/bundled/twitter/: HAND.toml  SKILL.md
crates/sk-hands/bundled/web-search/: HAND.toml  SKILL.md
crates/sk-hands/openfang-hands/src/: lib.rs  registry.rs
crates/sk-hands/src/: bundled.rs  lib.rs  registry.rs
crates/sk-kernel/: Cargo.toml
crates/sk-kernel/src/: api.rs  approval.rs  auth.rs  auto_reply.rs  background.rs  bus.rs  capabilities.rs  config.rs  config_reload.rs  control_plane.rs  cron.rs  error.rs  event_bus.rs  executor.rs  heartbeat.rs  kernel.rs  lib.rs  metering.rs  pairing.rs  registry.rs  scheduler.rs  supervisor.rs  tools.rs  triggers.rs  whatsapp_gateway.rs  wizard.rs  workflow.rs
crates/sk-kernel/src/tools/: discovery.rs
crates/sk-mcp/: Cargo.toml
crates/sk-mcp/src/: client.rs  lib.rs  protocol.rs  registry.rs  server.rs  transport.rs
crates/sk-mcp/src/connectors/: mod.rs  sql.rs  telegram.rs
crates/sk-memory/: Cargo.toml
crates/sk-memory/src/: audit.rs  bm25.rs  checkpoint.rs  consolidation.rs  embedding.rs  hybrid.rs  knowledge.rs  lib.rs  mmr.rs  semantic.rs  session.rs  shared.rs  structured.rs  substrate.rs  temporal_decay.rs
crates/sk-memory/tests/: integration_test.rs
crates/sk-soul/: Cargo.toml
crates/sk-soul/src/: continuity.rs  identity.rs  lib.rs  persona.rs
crates/sk-tools/: Cargo.toml
crates/sk-tools/skills/1password/: SKILL.md
crates/sk-tools/skills/api-design/: SKILL.md
crates/sk-tools/skills/apple-reminders/: SKILL.md
crates/sk-tools/skills/backend-dev/: SKILL.md
crates/sk-tools/skills/bear-notes/: SKILL.md
crates/sk-tools/skills/blogwatcher/: SKILL.md
crates/sk-tools/skills/bluebubbles/: SKILL.md
crates/sk-tools/skills/business-analyst/: SKILL.md
crates/sk-tools/skills/canvas/: SKILL.md
crates/sk-tools/skills/career-coach/: SKILL.md
crates/sk-tools/skills/ci-cd-expert/: SKILL.md
crates/sk-tools/skills/clawhub/: SKILL.md
crates/sk-tools/skills/cloud-aws/: SKILL.md
crates/sk-tools/skills/cloud-azure/: SKILL.md
crates/sk-tools/skills/cloud-gcp/: SKILL.md
crates/sk-tools/skills/code-reviewer/: SKILL.md
crates/sk-tools/skills/coding-agent/: SKILL.md
crates/sk-tools/src/: browser.rs  browser_bridge.py  browser_tools.rs  code_exec.rs  events.rs  file_ops.rs  knowledge.rs  lib.rs  mcp_bridge.rs  memory_tools.rs  otto.rs  ottos_outpost.rs  scheduler.rs  shared_memory.rs  shell.rs  skills.rs  village_forge.rs  voice_tools.rs  web_fetch.rs  web_search.rs
crates/sk-types/: Cargo.toml
crates/sk-types/src/: agent.rs  approval.rs  capability.rs  config.rs  error.rs  event.rs  lib.rs  manifest_signing.rs  memory.rs  message.rs  model_catalog.rs  scheduler.rs  security.rs  serde_compat.rs  session.rs  tool.rs  tool_compat.rs
(+102 files in other folders)
