[package]
name = "sk-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "sk CLI — daemon controller and interactive chat"

[[bin]]
name = "sovereign"
path = "src/main.rs"

[dependencies]
sk-types = { workspace = true }
sk-kernel = { workspace = true }
sk-engine = { workspace = true }
sk-memory = { workspace = true }
sk-soul = { workspace = true }
sk-mcp = { workspace = true }
sk-tools = { workspace = true }
sk-channels = { path = "../sk-channels" }
sk-hands = { path = "../sk-hands" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
sysinfo = "0.33.0"
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
md5 = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
open = "5"
