[package]
name = "sk-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Agent execution engine — LLM drivers, agent loop, tool runner"

[dependencies]
sk-types = { workspace = true }
sk-soul = { workspace = true }
sk-memory = { workspace = true }
sk-mcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart"] }
async-trait = { workspace = true }
uuid.workspace = true
chrono = { workspace = true }
sha2 = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
wasmtime = "25.0"
anyhow = { workspace = true }
base64.workspace = true
regex = "1.12.3"
regex-lite = "0.1"
zeroize = "1.8"
hex = "0.4"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
