[package]
name = "sk-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Kernel orchestration — scheduler, event bus, capabilities"

[dependencies]
sk-types = { workspace = true }
sk-memory = { workspace = true }
sk-engine = { workspace = true }
sk-mcp = { workspace = true }
sk-soul = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
sha2.workspace = true
hex.workspace = true
toml = "0.8"
rand = "0.8"
reqwest = "0.12"
futures = "0.3"
subtle = "2.5"
dirs = "5.0"
axum = { workspace = true, features = ["json"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
sk-tools = { version = "0.1.0", path = "../sk-tools" }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
