[package]
name = "sk-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Infinite Memory — SQLite + vector + BM25 hybrid search"

[dependencies]
sk-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono.workspace = true
uuid = { workspace = true }
rusqlite = { workspace = true }
async-trait = { workspace = true }
sha2.workspace = true
[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
tokio = { workspace = true }
