[package]
name = "sk-soul"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Soul identity system — SOUL.md parser and persona injection"

[dependencies]
sk-types = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex-lite = { workspace = true }
chrono = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
