[package]
name = "sk-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Built-in tools — web search, file ops, shell, memory"

[dependencies]
sk-types = { workspace = true }
sk-memory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_yaml = { workspace = true }
regex-lite = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
