[package]
name = "sk-types"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core types for the Sovereign Kernel"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = "0.4"
uuid = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
